scrollbar fix i upload bnutton

--- a/src/CmsAdmin/Resource/front/js/video-frame-extractor/extractor.css
+++ b/src/CmsAdmin/Resource/front/js/video-frame-extractor/extractor.css
@@ -1,14 +1,20 @@
+.frame-extractor #userPoster {
+  visibility: hidden; }
+
 .frame-extractor video {
   height: 250px;
   width: auto; }
 
-.frame-extractor .frame-camera {
+.frame-extractor .frame-camera, .frame-extractor .frame-upload {
   position: absolute;
   top: 20px;
   height: 54px;
-  height: 54px;
+  width: 54px;
   right: 50px;
   border-radius: 110px; }
+
+.frame-extractor .frame-upload {
+  top: 90px; }
 
 .frame-extractor .row.video-container {
   position: relative; }
